==> Sirokujira/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/MBED/DeviceCode/MBED_I2C/MBED_I2C.cpp <==
#include <tinyhal.h>
#include "..\MBED.h"
#include "mbed.h"
#include "system_MBRZA1H.h"
#include "mbed_assert.h"
#include "i2c_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "r_typedefs.h"
#include "riic_iodefine.h"
#include "RZ_A1_Init.h"
#include "MBRZA1H.h"
#include "MBED_I2C.h"
#define ENABLE_NACKF
#define I2C_TIMEOUT_1S (3600000)
#define I2C_TIMEOUT_100MS (360000)
#define I2C_TIMEOUT_1MS (36000)
#define I2C_TIMEOUT_NACK I2C_TIMEOUT_1MS
#define I2C_TIMEOUT_STOP_CONDITION I2C_TIMEOUT_100MS
#define I2C_TIMEOUT_BUS_BUSY I2C_TIMEOUT_100MS
#define I2C_CLEAR_LINE
#define float   float
#define float   float
#define NUM_OF_I2C  3

BOOL MBED_I2C_Driver::Initialize(UINT32 ch)
{
    i2c_t *obj = (i2c_t *)&i2c_obj[ch];
    I2CName i2c_sda = (I2CName)pinmap_peripheral(SDA_PIN[ch], PinMap_I2C_SDA);
    I2CName i2c_scl = (I2CName)pinmap_peripheral(SCL_PIN[ch], PinMap_I2C_SCL);
    obj->i2c = pinmap_merge(i2c_sda, i2c_scl);
    MBED_ASSERT((int)obj->i2c != NC);
    i2c_Power(ch);
    /* set default frequency at 100k */
    rz_i2c_frequency(ch, 100000);
    rz_i2c_reset(ch);
    pinmap_pinout(SDA_PIN[ch], PinMap_I2C_SDA);
    pinmap_pinout(SCL_PIN[ch], PinMap_I2C_SCL);
    g_MBED_I2C_Driver.m_currentXAction = NULL;
    g_MBED_I2C_Driver.m_currentXActionUnit = NULL;
    g_MBED_I2C_Driver.m_initialized  = TRUE;
    InterruptHandlerRegister(I2C_TEI[ch], (IRQHandler)I2C_TEI_ISR[ch]);
    InterruptHandlerRegister(I2C_RI[ch],  (IRQHandler)I2C_RI_ISR[ch]);
    InterruptHandlerRegister(I2C_TI[ch],  (IRQHandler)I2C_TI_ISR[ch]);
    InterruptHandlerRegister(I2C_SPI[ch], (IRQHandler)I2C_SPI_ISR[ch]);
    InterruptHandlerRegister(I2C_STI[ch], (IRQHandler)I2C_STI_ISR[ch]);
    InterruptHandlerRegister(I2C_NAKI[ch],(IRQHandler)I2C_NAKI_ISR[ch]);
    InterruptHandlerRegister(I2C_ALI[ch], (IRQHandler)I2C_ALI_ISR[ch]);
    InterruptHandlerRegister(I2C_TMOI[ch],(IRQHandler)I2C_TMOI_ISR[ch]);
    i2c_IPR(ch, 6);
#if defined(DEBUG_I2C)
    dbg_printf("I2C Init\r\n");
#endif
    return TRUE;
}

BOOL MBED_I2C_Driver::Uninitialize(UINT32 ch)
{
    NATIVE_PROFILE_HAL_PROCESSOR_I2C();
#if defined(DEBUG_I2C)
    dbg_printf("I2C Uninit\r\n");
#endif
    return TRUE;
}

void MBED_I2C_Driver::ReadLastByte(UINT32 ch)
{
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    I2C_HAL_XACTION *xAction = g_MBED_I2C_Driver.m_currentXAction;
    I2C_HAL_XACTION_UNIT *unit = g_MBED_I2C_Driver.m_currentXActionUnit;

    if(xAction->ProcessingLastUnit()) {
        reg->RIICnSR2.UINT32 &= ~SR2_STOP;
        reg->RIICnCR2.UINT32 |= CR2_SP;
        ReadFromSubordinate(ch, unit);
        reg->RIICnMR3.UINT32 &= ~MR3_WAIT;
        (void)rz_i2c_wait_STOP(reg);
        reg->RIICnSR2.UINT32 &= ~SR2_NACKF;
        reg->RIICnSR2.UINT32 &= ~SR2_STOP;
        xAction->Signal(I2C_HAL_XACTION::c_Status_Completed);//Complete
    } else {
        ReadFromSubordinate(ch, unit);
        MasterXAction_Start(ch, xAction, true);
    }
}

void MBED_I2C_Driver::StopCondition(UINT32 ch)
{
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    reg->RIICnSR2.UINT32 &= ~SR2_STOP;
    reg->RIICnCR2.UINT32 |= CR2_SP;
    UINT8 dummy = reg->RIICnDRR.UINT8[0];
    (void)rz_i2c_wait_STOP(reg);
    reg->RIICnSR2.UINT32 &= ~SR2_NACKF;
    reg->RIICnSR2.UINT32 &= ~SR2_STOP;
}

void MBED_I2C_Driver::Abort(UINT32 ch)
{
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    I2C_HAL_XACTION *xAction = g_MBED_I2C_Driver.m_currentXAction;
    StopCondition(ch);
#if defined(I2C_RESET_ERROR)
    rz_i2c_reset(ch);
#else
    reg->RIICnIER.UINT32 = 0;
    reg->RIICnCR1.UINT32 &= ~CR1_ICE;
#endif
#if defined(DEBUG_I2C)
    dbg_printf("I2C Abt\r\n");
#endif
    xAction->Signal(I2C_HAL_XACTION::c_Status_Aborted);
}

void MBED_I2C_Driver::MasterXAction_Start(UINT32 ch, I2C_HAL_XACTION* xAction, bool repeatedStart)
{
    NATIVE_PROFILE_HAL_PROCESSOR_I2C();
    i2c_t *obj = (i2c_t *)&i2c_obj[ch];
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    UINT8 address;
    volatile UINT32 timeout;

#if defined(DEBUG_I2C_DUMP_REGS)
    dbg_printf("XActionS-0 CR1:%02X CR2:%02X SR1:%02X SR2:%02X IER:%02X\r\n",
            reg->RIICnCR1.UINT8[0], reg->RIICnCR2.UINT8[0], reg->RIICnSR1.UINT8[0], reg->RIICnSR2.UINT8[0], reg->RIICnIER.UINT8[0]);
    dbg_printf("XActionS-1 MR1:%02X MR2:%02X MR3:%02X\r\n",
            reg->RIICnMR1.UINT8[0], reg->RIICnMR2.UINT8[0], reg->RIICnMR3.UINT8[0]);
    dbg_printf("XActionS-2 FER:%02X BRL:%02X BRH:%02X\r\n",
            reg->RIICnFER.UINT8[0], reg->RIICnBRL.UINT8[0], reg->RIICnBRH.UINT8[0]);
#endif
    if (g_MBED_I2C_Driver.m_initialized == FALSE)
        return;
    if ((reg->RIICnCR1.UINT32 & CR1_SDAI) == 0) {
        rz_i2c_clear_line(ch);
    }
    GLOBAL_LOCK(irq);
    g_MBED_I2C_Driver.m_currentXAction = xAction;
    g_MBED_I2C_Driver.m_currentXActionUnit = xAction->m_xActionUnits[xAction->m_current++];
    I2C_HAL_XACTION_UNIT *unit = g_MBED_I2C_Driver.m_currentXActionUnit;

    reg->RIICnCR1.UINT32 &= ~CR1_ICE;       // I2C disable
    reg->RIICnMR1.UINT8[0] &= ~0x08;        // P_phi /x  9bit (including Ack)
    reg->RIICnMR1.UINT8[0] |=  obj->pclk_bit;
    reg->RIICnBRL.UINT8[0] =  obj->width_low;
    reg->RIICnBRH.UINT8[0] =  obj->width_hi;
    reg->RIICnCR1.UINT32 |= CR1_ICE;        // I2C enable
    address  = 0xFE & (xAction->m_address << 1);
    address |= unit->IsReadXActionUnit() ? MBED_I2C_Driver::c_DirectionRead : MBED_I2C_Driver::c_DirectionWrite;
    reg->RIICnCR2.UINT32 |= CR2_MST;        // I2C master
    reg->RIICnCR2.UINT32 |= CR2_TRS;        // I2C transmit
#ifdef DEBUG_I2C
    if (repeatedStart) {
        dbg_printf("I2C RS SLA=%02X %02X %02X %02X\r\n",
                address, reg->RIICnCR1.UINT8[0], reg->RIICnCR2.UINT8[0], reg->RIICnSR2.UINT8[0]);
    } else {
        dbg_printf("I2C ST SLA=%02X %02X %02X %02X\r\n",
                address, reg->RIICnCR1.UINT8[0], reg->RIICnCR2.UINT8[0], reg->RIICnSR2.UINT8[0]);
    }
#endif
    if (rz_i2c_wait_BUS_BUSY(reg) == FALSE) {
        Abort(ch);
        return;
    }
    if (!repeatedStart)
        reg->RIICnCR2.UINT32 |= CR2_ST;    // I2C start condition
    else
        reg->RIICnCR2.UINT32 |= CR2_RS;     // I2C repeatedstart condition
    if (rz_i2c_wait_TDRE(reg) == FALSE) {
        Abort(ch);
        return;
    }
    // TODO: handling 10 bit address
    if (!unit->IsReadXActionUnit()) {
        reg->RIICnIER.UINT32 |= (IER_TIE);
        reg->RIICnDRT.UINT32 = address;    // I2C send slave address
        i2c_IEN(ch, 1);
    } else {
        HAL_Time_Sleep_MicroSeconds_InterruptEnabled(50);
        reg->RIICnDRT.UINT32 = address;    // I2C send slave address
        if (rz_i2c_wait_RDRF(reg) == FALSE) {
            Abort(ch);
            return;
        }
        if (unit->m_bytesToTransfer == 1) {
            reg->RIICnMR3.UINT32 |= MR3_WAIT;
            reg->RIICnMR3.UINT32 |= MR3_ACKWP;
            reg->RIICnMR3.UINT32 |= MR3_ACKBT;
            reg->RIICnMR3.UINT32 &= ~MR3_ACKWP;
        } else if (unit->m_bytesToTransfer == 2) {
            reg->RIICnMR3.UINT32 |= MR3_WAIT;
        }
        reg->RIICnIER.UINT32 |= (IER_RIE);
        UINT8 dummy = reg->RIICnDRR.UINT8[0];
        i2c_IEN(ch, 1);
    }
#ifdef DEBUG_I2C
    dbg_printf("I2C ST\r\n");
#endif
}

void MBED_I2C_Driver::MasterXAction_Stop(UINT32 ch)
{
    NATIVE_PROFILE_HAL_PROCESSOR_I2C();
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    i2c_IEN(ch, 0);
    reg->RIICnIER.UINT32 = 0;
    reg->RIICnCR1.UINT32 &= ~CR1_ICE;
    g_MBED_I2C_Driver.m_currentXAction = NULL;
    g_MBED_I2C_Driver.m_currentXActionUnit = NULL;
#ifdef DEBUG_I2C
    dbg_printf("I2C Stop %02x\r\n", reg->RIICnSR2.UINT8[0]);
#endif
}

void MBED_I2C_Driver::GetClockRate(UINT32 ch, UINT32 rateKhz, UINT8& clockRate, UINT8& clockRate2)
{
    i2c_t *obj = (i2c_t *)&i2c_obj[ch];
    rz_i2c_frequency(ch, (int)rateKhz*1000);
    clockRate2 = (UINT8)obj->width_low;
    clockRate = (UINT8)obj->width_hi;
#ifdef DEBUG_I2C_CLK
    dbg_printf("I2C CLK=%d %d\r\n", clockRate, clockRate2);
#endif
}

void MBED_I2C_Driver::WriteToSubordinate(UINT32 ch, I2C_HAL_XACTION_UNIT *unit)
{
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    UINT8 *queueData;
    queueData = unit->m_dataQueue.Pop();
    //ASSERT(queueData);
    if (queueData == NULL) {
#if defined(DEBUG_I2C)
        dbg_printf("I2C wque err\r\n");
#endif
        return;
    }
#ifdef DEBUG_I2C_TX_DATA
    dbg_printf("w%02x", *queueData);
    //dbg_printf("w");
#endif
    while ((reg->RIICnSR2.UINT32 & SR2_TDRE) == 0);
    reg->RIICnDRT.UINT8[0] = (UINT8)*queueData;
    ++unit->m_bytesTransferred;
    --unit->m_bytesToTransfer;
}

void MBED_I2C_Driver::ReadFromSubordinate(UINT32 ch, I2C_HAL_XACTION_UNIT *unit)
{
    i2c_reg *reg = (i2c_reg *)(RIIC[ch]);
    UINT8* queueData;
    queueData = unit->m_dataQueue.Push();
    //ASSERT(queueData);
    if (queueData == NULL) {
#if defined(DEBUG_I2C)
        dbg_printf("I2C rque err\r\n");
#endif
        return;
    }
    UINT8 data = (UINT8)reg->RIICnDRR.UINT8[0];
#ifdef DEBUG_I2C_RX_DATA
    dbg_printf("r%02x", data);
    //dbg_printf("r");
#endif
    *queueData = data;
    ++unit->m_bytesTransferred;
    --unit->m_bytesToTransfer;
}

void  MBED_I2C_Driver::GetPins(UINT32 ch, GPIO_PIN& scl, GPIO_PIN& sda)
{
    NATIVE_PROFILE_HAL_PROCESSOR_I2C();
    scl = SCL_PIN[ch];
    sda = SDA_PIN[ch];
}
